# agents-examples

./: .gitignore  .gitmodules  01_agent.py  03_agent_memory.py  16_wf_fun.py  20_wf_wfagent.py  22_wf_skip_events.py  23_db_json.py  27_youtube_reader.py  28_session_plan.py  29_decisions_logs.py  29_decisions_logs_2.py  33_tool_hooks.py  34_tool_decorator.py  36_tool_async.py  38_tool_rename.py  main.py  pyproject.toml
advanced/: 01_HIL.py  02_langwatch.py  03_scenario_testing.py  04_workflow_recruter.md  04_workflow_recruter.py  Agno-ai-sdk-adapter.md
agentos/agi_ui/: basic.py
agentos/hitl/: Makefile  api.http  hitl_confirmation.py  readme.md
agentos/post_evaluation/: ai.http  background_output_evaluation.py
basic/: 02_agent_store.py  04_agent_knowledge.py  05_team.py  06_workflow.py  07_workflow_long.py  08_workflow_events.py  09_workflow_stream.py  10_wf_seq.py  11_wf_parallel.py  12_wf_cond.py  13_wf_loop.py  14_wf_branch.py  15_wf_custom.py  17_wf_cond_complex.py  18_router_loop_step.py  19_wf_validation.py  21_wf_cancelation.py  24_knowledge_chroma.py  25_rag_reranking.py  26_rag_distributed.py  30_tools.py  31_tool_context.py  32_tools_custom.py  35_tool_kit.py  37_mcp_multi.py  39_mcp_browser.py  40_workflowtools.py  41_data_duckdb.py  41_file_audio.py
